<resources>
    <string name="app_name">RPG</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="btn_avancar">Avançar</string>
    <string name="btn_finish">FINALIZAR</string>
    <string name="tab_text_1">Criar</string>
    <string name="tab_text_2">Dados</string>
    <string name="tab_text_3">Fichas</string>
    <string name="tab_text_4">Livro</string>
    <string name="txt_jog">Nome do Jogador:</string>
    <string name="txt_nome">Nome do Personagem:</string>
    <string name="txt_idade">Idade:</string>
    <string name="txt_sistema">Sistema:</string>
    <string name="txt_raca">Raça:</string>
    <string name="txt_classe">Classe:</string>
    <string name="txt_inicio">Dados:</string>
    <string name="txt_fim">Escolha o valor do dado:</string>
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="d20">D20</string>
    <string name="da">Rolar</string>
    <string name="escolharaca">Raça:</string>
    <string name="escolhaorigem">Origem:</string>
    <string name="escolhatendencia">Alinhamento:</string>
    <string name="escolhametodo">Método para Definir Atributos:</string>
    <string name="escolhaclasse">Classe:</string>
    <string name="escolhaLevel">Nível:</string>
    <string name="pontos">Pontos Restantes:</string>
    <string name="rolar">Rolar</string>
    <string name="comprar">Comprar</string>
    <string name="consti">Constituição</string>
    <string name="forc">Força</string>
    <string name="destre">Destreza</string>
    <string name="caris">Carisma</string>
    <string name="sabe">Sabedoria</string>
    <string name="inte">Inteligência</string>
    <string name="perit">Perícias Treinadas:</string>
    <string name="spv">PV:</string>
    <string name="spm">PM:</string>
    <string name="sAtrib">Atributos:</string>
    <string name="sconsti">Constituição:</string>
    <string name="sforc">Força:</string>
    <string name="sdestre">Destreza:</string>
    <string name="scaris">Carisma:</string>
    <string name="ssabe">Sabedoria:</string>
    <string name="sinte">Inteligência:</string>
    <string name="smagia">Magias:</string>
    <string name="speri">Perícias Treinadas:</string>
    <string-array name="Alin1">
        <item>Caótico</item>
        <item>Neutro</item>
        <item>Leal</item>
    </string-array>
    <string-array name="Alin2">
        <item>Bondoso</item>
        <item>Neutro</item>
        <item>Maligno</item>
    </string-array>
    <string-array name="Origem">
        <item>Acólito</item>
        <item>Amigo dos Animais</item>
        <item>Amnésico</item>
        <item>Aristocrata</item>
        <item>Artesão</item>
        <item>Artista</item>
        <item>Assistente de Laboratório</item>
        <item>Batedor</item>
        <item>Capanga</item>
        <item>Charlatão</item>
        <item>Circense</item>
        <item>Criminoso</item>
        <item>Curandeiro</item>
        <item>Eremita</item>
        <item>Escravo</item>
        <item>Estudioso</item>
        <item>Fazendeiro</item>
        <item>Forasteiro</item>
        <item>Gladiador</item>
        <item>Guarda</item>
        <item>Herdeiro</item>
        <item>Herói Camponês</item>
        <item>Marujo</item>
        <item>Mateiro</item>
        <item>Membro de Guilda</item>
        <item>Mercador</item>
        <item>Minerador</item>
        <item>Nômade</item>
        <item>Pivete</item>
        <item>Refugiado</item>
        <item>Seguidor</item>
        <item>Selvagem</item>
        <item>Soldado</item>
        <item>Taverneiro</item>
        <item>Trabalhador</item>
    </string-array>
    <string-array name="Raças">
        <item>Humano</item>
        <item>Anão</item>
        <item>Dahllan</item>
        <item>Elfo</item>
        <item>Goblin</item>
        <item>Lefou</item>
        <item>Minotauro</item>
        <item>Qareen</item>
        <item>Golem</item>
        <item>Hynne</item>
        <item>Kliren</item>
        <item>Medusa</item>
        <item>Osteon</item>
        <item>Sereia/Tristão</item>
        <item>Sílfide</item>
        <item>Suraggel</item>
        <item>Trog</item>
    </string-array>
    <string-array name="Classes">
        <item>Arcanista</item>
        <item>Bárbaro</item>
        <item>Bardo</item>
        <item>Bucaneiro</item>
        <item>Caçador</item>
        <item>Cavaleiro</item>
        <item>Clérigo</item>
        <item>Druida</item>
        <item>Guerreiro</item>
        <item>Inventor</item>
        <item>Ladino</item>
        <item>Lutador</item>
        <item>Nobre</item>
        <item>Paladino</item>
    </string-array>
    <string-array name="Atributos">
        <item>Força</item>
        <item>Destreza</item>
        <item>Constituição</item>
        <item>Inteligência</item>
        <item>Sabedoria</item>
        <item>Carisma</item>
    </string-array>
    <string name="edt_email">Email</string>
    <string name="btn_login">Login</string>
    <string name="edt_senha">Senha</string>
    <string name="txt_forget">Esqueceu sua senha? Clique aqui</string>
    <string name="txt_new">É novo aqui? Cadastre-se clicando aqui.</string>
    <string name="edt_confirm">Confirmar Senha</string>
    <string name="btn_cad">Cadastrar</string>
    <string name="action_logout">Sair</string>
    <string name="abjur">Abjuração</string>
    <string name="adiv">Adivinhação</string>
    <string name="conv">Convocação</string>
    <string name="encan">Encantamento</string>
    <string name="evoc">Evocação</string>
    <string name="ilusao">Ilusão</string>
    <string name="necro">Necromancia</string>
    <string name="trans">Transmutação</string>
    <string-array name="magias1arc">
        <item>Alarme.\nAvisa quando alguém invadir uma área protegida.\n</item>
        <item>Armadura Arcana.\nAumenta sua Defesa.\n</item>
        <item>Resistência a Energia.\nFornece resistência contra um tipo de energia a sua escolha.\n</item>
        <item>Tranca Arcana.\nTranca um item que possa ser aberto ou fechado.\n</item>
        <item>Aviso.\nEnvia um alerta telepático para uma criatura. Compreensão. Você entende qualquer coisa escrita ou falada e pode ouvir pensamentos.\n</item>
        <item>Compreensão.\nVocê entende qualquer coisa escrita ou falada e pode ouvir pensamentos.\n</item>
        <item>Concentração de Combate.\nAo atacar, você pode rolar dois dados e ficar com o melhor.\n</item>
        <item>Visão Mística.\nVocê pode ver auras mágicas.\n</item>
        <item>Área Escorregadia.\nCriaturas na área podem cair ou objeto afetado pode ser derrubado.\n</item>
        <item>Conjurar Monstro.\nConvoca um monstro sob seu comando.\n</item>
        <item>Névoa.\nCria uma névoa que oferece camuflagem.\n</item>
        <item>Teia.\nCriaturas na área ficam enredadas.\n</item>
        <item>Adaga Mental.\nAlvo sofre dano mental e pode ficar pasmo.\n</item>
        <item>Enfeitiçar.\nAlvo se torna prestativo e pode realizar um pedido seu.\n</item>
        <item>Hipnotismo. \nAlvos ficam fascinados.\n</item>
        <item>Sono. \nAlvo fica fatigado ou cai em um sono profundo.\n</item>
        <item>Explosão de Chamas. \nCone causa dano de fogo.\n</item>
        <item>Luz. \nObjeto ilumina como uma tocha.\n</item>
        <item>Seta Infalível de Talude. \nDispara setas de energia que acertam automaticamente.\n</item>
        <item>Toque Chocante. \nToque causa dano de eletricidade.\n</item>
        <item>Criar Ilusão. \nCria uma ilusão visual ou sonora.\n</item>
        <item>Disfarce Ilusório. \nMuda a aparência de uma ou mais criaturas.\n</item>
        <item>Imagem Espelhada. \nCria duplicatas para confundir os inimigos, oferecendo bônus na Defesa.\n</item>
        <item>Leque Cromático. \nCriaturas na área ficam ofuscadas ou atordoadas.</item>
        <item>Amedrontar.\nO alvo fica abalado ou apavorado.\n</item>
        <item>Escuridão. \nObjeto emana uma área de escuridão.\n</item>
        <item>Raio do Enfraquecimento. \nO alvo fica fatigado ou vulnerável.\n</item>
        <item>Vitalidade Fantasma. \nVocê recebe pontos de vida temporários.\n</item>
        <item>Arma Mágica. \nArma recebe bônus ou poderes mágicos.\n</item>
        <item>Primor Atlético. \nAlvo recebe bônus no deslocamento e em testes de Atletismo.\n</item>
        <item>Queda Suave. \nAlvo cai lentamente.\n</item>
        <item>Transmutar Objetos. \nPode consertar ou fabricar um objeto temporário.\n</item>
    </string-array>
    <string-array name="arc1abjur">
        <item>Alarme.\nAvisa quando alguém invadir uma área protegida.\n</item>
        <item>Armadura Arcana.\nAumenta sua Defesa.\n</item>
        <item>Resistência a Energia.\nFornece resistência contra um tipo de energia a sua escolha.\n</item>
        <item>Tranca Arcana.\nTranca um item que possa ser aberto ou fechado.\n</item>
    </string-array>
    <string-array name="arc1adiv">
        <item>Aviso.\nEnvia um alerta telepático para uma criatura. Compreensão. Você entende qualquer coisa escrita ou falada e pode ouvir pensamentos.\n</item>
        <item>Compreensão.\nVocê entende qualquer coisa escrita ou falada e pode ouvir pensamentos.\n</item>
        <item>Concentração de Combate.\nAo atacar, você pode rolar dois dados e ficar com o melhor.\n</item>
        <item>Visão Mística.\nVocê pode ver auras mágicas.\n</item>
    </string-array>
    <string-array name="arc1conv">
        <item>Área Escorregadia.\nCriaturas na área podem cair ou objeto afetado pode ser derrubado.\n</item>
        <item>Conjurar Monstro.\nConvoca um monstro sob seu comando.\n</item>
        <item>Névoa.\nCria uma névoa que oferece camuflagem.\n</item>
        <item>Teia.\nCriaturas na área ficam enredadas.\n</item>
    </string-array>
    <string-array name="arc1encan">
        <item>Adaga Mental.\nAlvo sofre dano mental e pode ficar pasmo.v</item>
        <item>Enfeitiçar.\nAlvo se torna prestativo e pode realizar um pedido seu.\n</item>
        <item>Hipnotismo. \nAlvos ficam fascinados.\n</item>
        <item>Sono. \nAlvo fica fatigado ou cai em um sono profundo.\n</item>
    </string-array>
    <string-array name="arc1evoc">
        <item>Explosão de Chamas. \nCone causa dano de fogo.\n</item>
        <item>Luz. \nObjeto ilumina como uma tocha.\n</item>
        <item>Seta Infalível de Talude. \nDispara setas de energia que acertam automaticamente.\n</item>
        <item>Toque Chocante. \nToque causa dano de eletricidade.\n</item>
    </string-array>
    <string-array name="arc1ilusao">
        <item>Criar Ilusão. \nCria uma ilusão visual ou sonora.\n</item>
        <item>Disfarce Ilusório. \nMuda a aparência de uma ou mais criaturas.\n</item>
        <item>Imagem Espelhada. \nCria duplicatas para confundir os inimigos, oferecendo bônus na Defesa.\n</item>
        <item>Leque Cromático. \nCriaturas na área ficam ofuscadas ou atordoadas.</item>
    </string-array>
    <string-array name="arc1necro">
        <item>Amedrontar.\nO alvo fica abalado ou apavorado.\n</item>
        <item>Escuridão. \nObjeto emana uma área de escuridão.\n</item>
        <item>Raio do Enfraquecimento. \nO alvo fica fatigado ou vulnerável.\n</item>
        <item>Vitalidade Fantasma. \nVocê recebe pontos de vida temporários.\n</item>
    </string-array>
    <string-array name="arc1trans">
        <item>Arma Mágica. \nArma recebe bônus ou poderes mágicos.\n</item>
        <item>Primor Atlético. \nAlvo recebe bônus no deslocamento e em testes de Atletismo.\n</item>
        <item>Queda Suave. \nAlvo cai lentamente.\n</item>
        <item>Transmutar Objetos. \nPode consertar ou fabricar um objeto temporário.\n</item>
    </string-array>
</resources>