<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.rpg.Fragments.Frag1"
        android:label="@string/tab_text_1"
        tools:layout="@layout/fragment_frag1" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.rpg.Fragments.Frag2"
        android:label="@string/tab_text_2"
        tools:layout="@layout/fragment_frag2" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.rpg.Fragments.Frag3"
        android:label="@string/tab_text_3"
        tools:layout="@layout/fragment_frag3" />

    <fragment
        android:id="@+id/navigation_livro"
        android:name="com.example.rpg.Fragments.Frag4"
        android:label="@string/tab_text_4"
        tools:layout="@layout/fragment_frag4"/>

</navigation>