<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drag5"
    tools:context=".Fragments.Frag2">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bd6"
                android:layout_width="138dp"
                android:layout_height="96dp"
                android:background="@drawable/button_dados"
                android:text="@string/d6"
                android:textSize="32sp"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/bd10"
                app:layout_constraintStart_toStartOf="@+id/bd10"
                app:layout_constraintTop_toBottomOf="@+id/txtinicio" />

            <Button
                android:id="@+id/bd4"
                android:layout_width="138dp"
                android:layout_height="96dp"
                android:background="@drawable/button_dados"
                android:text="@string/d4"
                android:textSize="32sp"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/bd8"
                app:layout_constraintStart_toStartOf="@+id/bd8"
                app:layout_constraintTop_toBottomOf="@+id/txtinicio" />

            <Button
                android:id="@+id/bd8"
                android:layout_width="138dp"
                android:layout_height="96dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_dados"
                android:text="@string/d8"
                android:textSize="32sp"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/bd12"
                app:layout_constraintStart_toStartOf="@+id/bd12"
                app:layout_constraintTop_toBottomOf="@+id/bd4" />

            <Button
                android:id="@+id/bd10"
                android:layout_width="138dp"
                android:layout_height="96dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_dados"
                android:text="@string/d10"
                android:textSize="32sp"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/bd20"
                app:layout_constraintStart_toStartOf="@+id/bd20"
                app:layout_constraintTop_toBottomOf="@+id/bd6" />

            <Button
                android:id="@+id/bd12"
                android:layout_width="138dp"
                android:layout_height="96dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_dados"
                android:text="d12"
                android:textSize="32sp"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/txtinicio"
                app:layout_constraintStart_toStartOf="@+id/bfim"
                app:layout_constraintTop_toBottomOf="@+id/bd8" />

            <Button
                android:id="@+id/bd20"
                android:layout_width="138dp"
                android:layout_height="96dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_dados"
                android:text="@string/d20"
                android:textSize="32sp"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/bfim"
                app:layout_constraintStart_toEndOf="@+id/txtinicio"
                app:layout_constraintTop_toBottomOf="@+id/bd10" />

            <Button
                android:id="@+id/bfim"
                android:layout_width="230dp"
                android:layout_height="58dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_dados"
                android:text="@string/da"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtD"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txtfim"
                android:layout_width="249dp"
                android:layout_height="33dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_fim"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:background="#1D3A3030"
                app:layout_constraintEnd_toEndOf="@+id/edtD"
                app:layout_constraintStart_toStartOf="@+id/edtD"
                app:layout_constraintTop_toBottomOf="@+id/bd12" />

            <EditText
                android:id="@+id/edtD"
                android:layout_width="229dp"
                android:layout_height="51dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="number"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/bfim"
                app:layout_constraintStart_toStartOf="@+id/bfim"
                app:layout_constraintTop_toBottomOf="@+id/txtfim" />

            <TextView
                android:id="@+id/txtinicio"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/txt_inicio"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:background="#1D3A3030"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
